# remote-control

./: .gitattributes  .gitignore  CLAUDE.md  README.md  create-desktop-shortcuts.vbs  enable-autostart.vbs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  signaling-url.json  start-agent-background.bat  start-agent-background.vbs  start-agent-silent.vbs  start-agent.bat  start-controller-native.command  start-controller.command  update-agent.bat
Personal Remote Controller.app/Contents/: Info.plist
Personal Remote Controller.app/Contents/MacOS/: launcher
Personal Remote Controller.app/Contents/Resources/: icon.icns
apps/desktop/: .gitignore  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.node.json
apps/desktop/native/dxgi-capturer/: .gitignore  CMakeLists.txt  README.md  build.ps1  main.cpp  nvenc.cpp  nvenc.h
docs/: architecture.md  bwe-hevc-plan.md  input-elevation-plan.md  mac-trackpad-plan.md  native-input-plan.md  native-video-plan.md  parsec-parity-research.md  secure-desktop-plan.md  step-fec-recovery.md  step-ltr-recovery.md  step-nack-retransmit.md  step3-dxgi-capturer.md  streaming-baseline-v1.27.0-beta.3.md  streaming-improvements-plan.md
scripts/: analyze-session.mjs  build-render-mac.sh  build-win.sh  install-agent-autostart.ps1  install-input-service.ps1  make-icons.py  nat-check.mjs  net-diag.mjs  phase0.ps1  phase1.ps1  phase2.ps1  setup-track2-permanent.ps1  track2-e2e.ps1  uninstall-agent-autostart.ps1  uninstall-input-service.ps1
server/signaling/: com.personalremote.signaling.plist  package.json  supervisor.mjs
(+136 files in other folders)
